--- a/app/blog/shopify/configuring-ga4-enhanced-ecommerce-events-on-shopify/page.mdx
+++ b/app/blog/shopify/configuring-ga4-enhanced-ecommerce-events-on-shopify/page.mdx
@@ -1,35 +1,32 @@
 export const metadata = {
- title: "Configuring Google Analytics 4 in Shopify using Native Integration",
- date: "2023-10-08",
- blogId: "00002",
+ title: "Google Analytics 4 in Shopify using Native Integration",
+ date: "2023-10-20",
+ blogId: "00001",
  tags: ["Google Analytics", "Shopify", "Tracking", "E-commerce"],
  draft: false,
  description: `In this blog, we are going to explore how you can configure Google Analytics 4 (GA4) for your Shopify store. By the end, you'll understand how to track e-commerce events like "view item", "add to cart", and "purchased" to gain insights into user behavior.`,
  openGraph: {
-  images: ["/static/blog/00007.png"],
+  images: ["/static/blog/00001.png"],
  },
- embedId: "wVVCpcD1XLo",
+ embedId: "IfSSxF7lhGE",
 };
 
 <BlogHeader metadata={metadata} />
 
-In this blog, we are going to explore how you can configure Google Analytics 4 (GA4)
-for your Shopify store. By the end, you'll understand how to track e-commerce events
-like "view item", "add to cart", and "purchased" to gain insights into user behavior.
+## Introduction
+
+In this blog, we are going to explore how you can configure Google
+Analytics 4 (GA4) for your Shopify store. By the end, you'll understand how to track
+e-commerce events like "view item", "add to cart", and "purchased" to gain insights
+into user behavior.
 
 <YoutubeEmbed embedId={metadata.embedId} />
-
-## Introduction
 
 Google Analytics provides us invaluable insights into our store's performance and customer behavior without the need for deep technical knowledge. It's a must-have for Shopify store owners who aim to optimize their business operations.
 
 Fear not; our guide ensures a smooth and hassle-free experience, breaking down every step for you.
 
 Don't worry; we're keeping things simple and straightforward.
-
-### Here's what we'll cover:
-
-<Accordion data='blogId_00060' />
 
 ## Two Main Approaches to Shopify Analytics Setup
 
