--- a/app/blog/shopify/setup-ga4-add-to-cart-on-shopify-using-gtm/page.mdx
+++ b/app/blog/shopify/setup-ga4-add-to-cart-on-shopify-using-gtm/page.mdx
@@ -1,13 +1,13 @@
 export const metadata = {
- title: "GA4 PageView Event on Shopify using GTM",
- date: "2023-10-28",
- blogId: "00003",
+ title: "GA4 Add to Cart Event on Shopify using GTM",
+ date: "2023-11-03",
+ blogId: "00005",
  tags: ["Google Analytics", "Shopify", "Google Tag Manager", "Tutorial"],
  draft: true,
  description:
-  "A step-by-step guide on how to set up Google Analytics 4 for your Shopify store using Google Tag Manager.",
+  "A step-by-step guide on how to set up Google Analytics 4' Add To Cart for your Shopify store using Google Tag Manager.",
  openGraph: {
-  images: ["/static/blog/00003.png"], // Images can be provided here
+  images: ["/static/blog/00005.png"], // Images can be provided here
  },
  embedId: "dpHhez-oCOU",
 };
