--- a/app/blog/shopify/configure-google-tag-manager-on-your-shopify-store/page.mdx
+++ b/app/blog/shopify/configure-google-tag-manager-on-your-shopify-store/page.mdx
@@ -1,32 +1,29 @@
 export const metadata = {
- title: "Configure Google Tag Manager on Your Shopify Store",
- date: "2023-10-07",
- blogId: "00001",
+ title: "Setting up Google Tag Manager on Your Shopify Store",
+ date: "2023-10-24",
+ blogId: "00002",
  tags: ["google tag manager", "google analytics 4", "shopify"],
- draft: false,
+ draft: true,
  openGraph: {
-  images: ["/static/blog/00006.png"],
+  images: ["/static/blog/00002.png"],
  },
  description:
   "In this guide, we detailed the step-by-step process of integrating Google Tag Manager (GTM) with a Shopify store. From the initial setup to nuances like upsell tracking, the tutorial covers essential prerequisites, embedding GTM snippets into the Shopify interface, and ensuring accurate tracking on crucial pages like the 'Thank You' page after a purchase. By following these steps, Shopify store owners can seamlessly monitor user interactions, optimize their store's performance, and enhance their marketing efforts.",
- embedId: "DdNpTpcypso",
+ embedId: "WclzG9ar8bc",
 };
 
 <BlogHeader metadata={metadata} />
+## Introduction
 
-Hello there! 🖐️ In today's tutorial, we'll dive deep into how you can configure Google Tag Manager (GTM) on your Shopify store. This detailed guide will provide you with step-by-step instructions, ensuring a seamless setup process.
+Hello there! 🖐️ In this blog, we'll dive deep into how you
+can configure Google Tag Manager (GTM) on your Shopify store. This detailed guide
+will provide you with step-by-step instructions, ensuring a seamless setup process.
 
 <YoutubeEmbed embedId={metadata.embedId} />
-
-## Introduction
 
 Google Tag Manager allows us to manage and deploy marketing tags on our website without modifying the code. This is especially useful for those of us who aren’t developers.
 
 Don't worry; we're keeping things simple and straightforward.
-
-### Here's what we'll cover:
-
-<Accordion data='blogId_00058' />
 
 ### Prerequisites:
 
@@ -37,14 +34,12 @@ If you're all set, let's dive in!
 
 ## Setting Up Your GTM Account
 
-If you need to create an account, follow this [link](https://youtu.be/Y1baN6llC8c).
-
 For those who already have a GTM account:
 
-1. Log in to your account. You will see your existing containers. But if you're new, you won't see any.
+1. [Log in to your account](https://tagmanager.google.com). You will see your existing containers. But if you're new, you won't see any.
 2. Click on **Create Account** on the top right.
 3. Enter the name of your company or business.
-4. Under the container, set up the URL of your website. For example, `trackingacademy.com`.
+4. Under the container, set up the URL of your website.
 
 <Note
  title='Tip'
@@ -80,9 +75,7 @@ Now, we need to place the GTM code snippets on your Shopify store. Don't worry; 
 
 With these steps, Google Tag Manager should now be correctly set up on your Shopify store. You can now easily track events, understand your audience better, and improve your marketing strategies.
 
-<br />
-
-Remember, if you're ever in doubt, there's always a community willing to help out. Join forums, ask questions, and always keep learning.
+Remember, if you're ever in doubt, there's always a [community](/newsletter) willing to help out. Join forums, ask questions, and always keep learning.
 
 <br />
 
