Finalized Blog 002 for publishing

--- a/app/blog/shopify/configure-google-tag-manager-on-your-shopify-store/page.mdx
+++ b/app/blog/shopify/configure-google-tag-manager-on-your-shopify-store/page.mdx
@@ -13,17 +13,16 @@ export const metadata = {
 };
 
 <BlogHeader metadata={metadata} />
+
 ## Introduction
 
-Hello there! 🖐️ In this blog, we'll dive deep into how you
+In this blog, we'll dive deep into how you
 can configure Google Tag Manager (GTM) on your Shopify store. This detailed guide
 will provide you with step-by-step instructions, ensuring a seamless setup process.
 
 <YoutubeEmbed embedId={metadata.embedId} />
 
-Google Tag Manager allows us to manage and deploy marketing tags on our website without modifying the code. This is especially useful for those of us who aren’t developers.
-
-Don't worry; we're keeping things simple and straightforward.
+Google Tag Manager allows us to manage and deploy marketing tags on our website without modifying the code. This is especially useful for those who aren’t developers.
 
 ### Prerequisites:
 
@@ -50,7 +49,7 @@ For those who already have a GTM account:
 
 Now, we need to place the GTM code snippets on your Shopify store. Don't worry; it's just copying and pasting.
 
-1. Head to Google Tag Manager. You'll find two snippets:
+1. Head to Google Tag Manager > Settings > Install Google Tag Manager. You'll find two snippets:
 
 <div className="pl-4">
 
@@ -68,7 +67,7 @@ Now, we need to place the GTM code snippets on your Shopify store. Don't worry; 
 
 <Note
  title='Note'
- content="It's a good practice to make a backup of your theme before editing its code. This ensures you have a fallback in case of any mistakes."
+ content="It's a good practice to make a duplicate (backup) of your theme before editing its code. This ensures you have a fallback in case of any mistakes."
 />
 
 ## Conclusion
