Finalized 00003 Blog for next publishing

--- a/app/blog/shopify/setup-ga4-add-to-cart-on-shopify-using-gtm/page.mdx
+++ b/app/blog/shopify/setup-ga4-add-to-cart-on-shopify-using-gtm/page.mdx
@@ -28,7 +28,7 @@ Manager.
 ## Initial Steps: Setting Up Google Analytics and Tag Manager Accounts
 
 1. If you've already set up your Google Analytics and Google Tag Manager accounts, you can skip to the next section. If not, you'll need to create your Google Analytics and Google Tag Manager accounts.
-2. Ensure that you have the Google Tag Assistant Chrome extension installed.
+2. Ensure that you have the [Google Tag Assistant Chrome extensions](https://chrome.google.com/webstore/detail/tag-assistant-legacy-by-g/kejbdjndbnbjgmefkgdddjlbokphdefk) installed.
 
 ## Installing the Google Tag Manager (GTM) Container on Shopify
 
