--- a/app/blog/shopify/setup-ga4-page-view-on-shopify-using-gtm/page.mdx
+++ b/app/blog/shopify/setup-ga4-page-view-on-shopify-using-gtm/page.mdx
@@ -2,8 +2,15 @@ export const metadata = {
  title: "GA4 PageView Event on Shopify using GTM",
  date: "2023-10-28",
  blogId: "00003",
- tags: ["Google Analytics", "Shopify", "Google Tag Manager", "Tutorial"],
- draft: true,
+ tags: [
+  "Google Analytics",
+  "Shopify",
+  "Google Tag Manager",
+  "Tutorial",
+  "Page View",
+  "Google Tag",
+ ],
+ draft: false,
  description:
   "A step-by-step guide on how to set up Google Analytics 4 for your Shopify store using Google Tag Manager.",
  openGraph: {
@@ -20,15 +27,10 @@ Setting up your Shopify store with Google Analytics 4 (GA4) is essential for kee
 
 <YoutubeEmbed embedId={metadata.embedId} />
 
-With the rise of e-commerce platforms, it's become increasingly important to monitor
-user interactions. Google Analytics 4 provides a comprehensive view of your site's
-activity. This guide will focus on integrating GA4 with Shopify using Google Tag
-Manager.
-
 ## Initial Steps: Setting Up Google Analytics and Tag Manager Accounts
 
 1. If you've already set up your Google Analytics and Google Tag Manager accounts, you can skip to the next section. If not, you'll need to create your Google Analytics and Google Tag Manager accounts.
-2. Ensure that you have the Google Tag Assistant Chrome extension installed.
+2. Ensure that you have the [**Google Tag Assistant Chrome extensions**](https://chrome.google.com/webstore/detail/tag-assistant-legacy-by-g/kejbdjndbnbjgmefkgdddjlbokphdefk) installed.
 
 ## Installing the Google Tag Manager (GTM) Container on Shopify
 
@@ -40,26 +42,30 @@ Manager.
 6. Click on **Edit Code** and locate the `theme.liquid` file.
 7. Find the `<head>` tag and paste the GTM tracking code you copied.
 8. Return to GTM and grab the tracking code for the `<body>`.
-9. Back in the `theme.liquid` file, search for the `<body>` tag and paste the second tracking code.
-10. Optionally, format the liquid to ensure it's readable.
-11. Save your changes.
+9. Back in the `theme.liquid` file, search for the `<body>` tag and paste the second tracking code in the next line.
+10. Save your changes.
+
+<Note
+ title='Optional'
+ content="Click on 'format' to pretify the code, to ensure it's readable."
+/>
 
 ## Verifying GTM Installation
 
 1. Visit your Shopify store.
-2. Use the **Google Tag Assistant** extension to check if GTM is correctly implemented. It should indicate that a GTM container has been found on the website.
+2. Use the [**Google Tag Assistant Chrome extensions**](https://chrome.google.com/webstore/detail/tag-assistant-legacy-by-g/kejbdjndbnbjgmefkgdddjlbokphdefk) to check if GTM is correctly implemented. It should indicate that a GTM container has been found on the website.
 
 ## Integrating Google Analytics 4 (GA4)
 
 1. In your GA4 account, click on **Admin** located at the bottom left.
 2. Go to **Property Settings** > **Data Streams**.
-3. Locate the relevant data stream (e.g., Web) and copy the **Measurement ID**.
+3. Locate the relevant data stream (e.g., Web for Shopify) and copy the **Measurement ID** (G-XXXXXXXX).
 4. Return to your GTM workspace.
 5. Navigate to **Variables** and create a constant variable named "GA4 Measurement ID" with the copied ID.
 6. Now, go to **Tags** > **New**.
-7. Choose a suitable name and select **GTag** as the tag type.
-8. Insert your "GA4 Measurement ID" variable.
-9. Save your changes and preview the workspace to ensure everything is functioning correctly.
+7. Select **Google Tag** as the tag type.
+8. Insert your "GA4 Measurement ID" variable in Google Tag.
+9. Save your changes, rename the Tag to "GT GA4 Configuration Tag" and preview the workspace to ensure everything is functioning correctly.
 10. If all goes well, GA4 should now be capturing data from your Shopify store!
 
 <Note
