Uplished Second Blog

--- a/app/blog/shopify/configure-google-tag-manager-on-your-shopify-store/page.mdx
+++ b/app/blog/shopify/configure-google-tag-manager-on-your-shopify-store/page.mdx
@@ -3,7 +3,7 @@ export const metadata = {
  date: "2023-10-24",
  blogId: "00002",
  tags: ["google tag manager", "google analytics 4", "shopify"],
- draft: true,
+ draft: false,
  openGraph: {
   images: ["/static/blog/00002.png"],
  },
