Updated Blog MDX for 004, 005

--- a/app/blog/shopify/configuring-ga4-view-item-event-on-shopify-using-gtm/page.mdx
+++ b/app/blog/shopify/configuring-ga4-view-item-event-on-shopify-using-gtm/page.mdx
@@ -11,9 +11,9 @@ export const metadata = {
  ],
  draft: true,
  description:
-  "A step-by-step guide on how to set up Google Analytics 4' View Item for your Shopify store using Google Tag Manager.",
+  "A step-by-step guide on how to set up Google Analytics 4' View Item (view_item) for your Shopify store using Google Tag Manager.",
  openGraph: {
-  images: ["/static/blog/00004.png"], // Images can be provided here
+  images: ["/static/blog/00004.png"],
  },
  embedId: "NveldEJ3jGU",
 };
