--- a/app/blog/shopify/setup-ga4-page-view-on-shopify-using-gtm/page.mdx
+++ b/app/blog/shopify/setup-ga4-page-view-on-shopify-using-gtm/page.mdx
@@ -10,7 +10,7 @@ export const metadata = {
   "Page View",
   "Google Tag",
  ],
- draft: false,
+ draft: true,
  description:
   "A step-by-step guide on how to set up Google Analytics 4 for your Shopify store using Google Tag Manager.",
  openGraph: {
