--- a/app/blog/shopify/configuring-ga4-enhanced-ecommerce-events-on-shopify/page.mdx
+++ b/app/blog/shopify/configuring-ga4-enhanced-ecommerce-events-on-shopify/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
  blogId: "00001",
  tags: ["Google Analytics", "Shopify", "Tracking", "E-commerce"],
  draft: false,
- description: `In this blog, we are going to explore how you can configure Google Analytics 4 (GA4) for your Shopify store. By the end, you'll understand how to track e-commerce events like "view item", "add to cart", and "purchased" to gain insights into user behavior.`,
+ description: `In this blog, we are going to explore how you can configure Google Analytics 4 (GA4) for your Shopify store. By the end, you'll understand how to track e-commerce events like "view item", "add to cart", and "purchase" to gain insights into user behavior.`,
  openGraph: {
   images: ["/static/blog/00001.png"],
  },
